--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npm run css && node scripts/build-content.mjs",
     "css": "tailwindcss -c tailwind.config.js -i ./src/styles/input.css -o ./public/styles/main.css --minify",
     "dev": "npx --yes serve -l 5173 public",
-    "dev:css": "tailwindcss -c tailwind.config.js -i ./src/styles/input.css -o ./public/styles/main.css --watch"
+    "dev:css": "tailwindcss -c tailwind.config.js -i ./src/styles/input.css -o ./public/styles/main.css --watch",
+    "test:content": "node scripts/test-content.mjs"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.13"
